# my-website

./: .gitignore  404.html  CNAME  Procfile  README.md  blog.css  blog.css.br  books.css.br  email.svg.br  favicon.png.br  fork.svg.br  games.css  games.css.br  github.svg.br  index.html  main.css.br  nginx.conf.erb  projects.css.br  sidebar.css  sidebar.css.br
api/: go.mod  go.sum  main.go
assets/: element.svg.br  favicon.ico.br  favicon.png.br  instagram.svg.br  main.css  my-website-d5d63e5a8f234527.js  my-website-d5d63e5a8f234527.js.br  my-website-dxh2f3965d3811d58b7.js  my-website-dxh32d68783ff6f361c.js  my-website_bg-43e01912e82398bf.wasm  my-website_bg-43e01912e82398bf.wasm.br  my-website_bg-dxh286bdc98e3e7c.wasm  my-website_bg-dxhcc1c8ee320baecc4.wasm  projects.css  sidebar.css  star.svg.br  steam.svg.br
blog/: on-programming-languages.md
games/: age_of_empires_ii.png.br  alien_isolation.png.br  amnesia.png.br  assassins_creed_ii.png.br  bioshock.png.br  cyberpunk_2077.png.br  fallout.png.br  grim_fandango.png.br  half_life.png.br  portal.png.br  the_witcher.png.br  (+2 more)
web/: Cargo.toml  Dioxus.toml
web/assets/: blog.css  books.css  gallery.css  games.css  main.css  projects.css  sidebar.css
web/assets/styles/: blog.css  books.css  games.css  main.css  projects.css  sidebar.css
web/src/: main.rs
web/src/components/: blog.rs  books.rs  gallery.rs  games.rs  interests.rs  mod.rs  projects.rs  sidebar.rs
web/src/config/: config.rs  config.toml  environment.rs  mod.rs
web/src/integrations/: mod.rs  my_api.rs
web/src/integrations/api/: main.rs
(+66 files in other folders)
