[package]
name = "my-website"
version = "0.1.0"
authors = ["FelipeFTN <felipeftn@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
serde = "1.0.202"
serde_json = "1.0.117"
config = "0.14.0"
notify = "6.1.1"
lazy_static = "1.4.0"
once_cell = "1.19.0"
